# fa

./: .env.example  .gitignore  LICENSE  main.py  pyproject.toml
src/: main.py
src/composer/: composer.py
src/data/: few_shots.json
src/data/cisa/: few_shots.json
src/data/microsoft-s2c2f/: few_shots.json  guidelines.md
src/data/owasp-scvs/: few_shots.json
src/data/sok/: few_shots.json
src/frameworks/: framework.py
src/frameworks/s2c2f/: s2c2f.py
src/frameworks/scvs/: scvs.py
src/frameworks/sok/: sok.py
src/guideline_generator/: guideline_generator.py
src/llm/: llm.py
src/models/: few_shot.py  guideline.py  llm_response.py  prompt.py
