[project]
name = "fa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright==1.27.1",
    "ruff==0.9.6",
]

[tool.basedpyright]
typeCheckingMode = "recommended"

[tool.ruff]
preview = true

# Enable specific rule categories
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
  "N",   # naming
  "A",   # flake8-builtins
  "T",   # flake8-print
]

# Ignore specific rules
ignore = ["F841", "F401", "E501", "F701"]
