[project]
name = "fa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.63.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "basedpyright==1.27.1",
    "pandas-stubs>=2.2.3.241126",
    "ruff==0.9.6",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
# reportUnusedVariable = "none"
# reportUnknownVariableType = "none"
# reportUnknownMemberType = "none"
# reportUnknownArgumentType = "none"

[tool.ruff]
preview = true

# Enable specific rule categories
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
  "N",   # naming
  "A",   # flake8-builtins
  "T",   # flake8-print
]

# Ignore specific rules
ignore = ["F841", "F401", "E501", "F701", "B007"]
